# mtlPy

./: .gitmodules  CMakeLists.txt  README.md  setup.py
src/api/: MtlInterfaceAPI.cpp  api.cpp
src/global/: constant.h  define.h  global.h  namespace.h  parameter.h  type.h
src/util/: Assert.h  MsgPrinter.cpp  MsgPrinter.h
